# physox

./: pyproject.toml
src/physox/: __init__.py  probability.py
