
---

### ✅ `pyproject.toml`

```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physox"
version = "0.1.0"
description = "PhysOx — voxel-time physics framework bridging quantum to cosmological scales"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Dr. Ippy", email = "admin@jdplumbingsoflo.com" }
]
requires-python = ">=3.9"
keywords = ["physics", "simulation", "uvoxid", "tdt", "voxel", "time"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/JDPlumbing/physox"
Repository = "https://github.com/JDPlumbing/physox"
